[TASK] Add spawn-fcgi to all php version

--- a/php-4.4/Dockerfile
+++ b/php-4.4/Dockerfile
@@ -13,7 +13,7 @@ RUN apt-get update &&  \
         libgpg-error-dev uuid-dev libt1-dev libsnmp-dev libc-client2007e-dev \
         libaspell-dev libbz2-dev libc-client2007e-dev flex bison libsqlite3-dev libpq-dev \
         libcurl4-openssl-dev libmagickwand-dev libgd2-xpm-dev autoconf imagemagick \
-        graphicsmagick && \
+        graphicsmagick spawn-fcgi && \
     DEBIAN_FRONTEND=noninteractive apt-get -y dist-upgrade && \
     apt-get clean && \
     rm /var/lib/apt/lists/*_*
