[TASk] Fix build of php4.4 fastcgi build

--- a/php-4.4/Dockerfile
+++ b/php-4.4/Dockerfile
@@ -58,7 +58,8 @@ RUN mkdir -p /tmp/install/ && \
     md5sum -c md5sums && \
     tar xfj php-${PHP_VERSION}.tar.bz2 && \
     cd php-${PHP_VERSION} && \
-    ./configure --enable-cgi \
+    ./configure \
+        --enable-fastcgi \
         --with-libdir=lib/x86_64-linux-gnu \
         --with-mcrypt  \
         --with-zlib \
