[BUGFIX] Correct typo in imagick module version php 5.4

--- a/php-5.4/Dockerfile
+++ b/php-5.4/Dockerfile
@@ -122,7 +122,7 @@ RUN mkdir -p /tmp/install/ && \
 
 RUN pecl install channel://pecl.php.net/pecl_http-2.0.7
 RUN pecl install channel://pecl.php.net/xdebug-2.2.5
-RUN pecl install channel://pecl.php.net/imagick-3.2.0RC
+RUN pecl install channel://pecl.php.net/imagick-3.2.0RC1
 RUN pecl install channel://pecl.php.net/apc-3.1.13
 RUN pecl install channel://pecl.php.net/mailparse-2.1.6
 RUN pecl install channel://pecl.php.net/geoip-1.0.8
