[BUGFIX] Fix problems with mini_sendmail

--- a/php-5.2/Dockerfile
+++ b/php-5.2/Dockerfile
@@ -133,10 +133,9 @@ RUN mkdir -p /tmp/install/ && \
 # Install sendmail replacement / set ip address of real mailserver to 172.17.42.1
 RUN mkdir -p /tmp/install/ && \
     cd /tmp/install && \
-    wget http://www.acme.com/software/mini_sendmail/mini_sendmail-1.3.8.tar.gz && \
-    tar xfz mini_sendmail-1.3.8.tar.gz && \
+    wget https://github.com/simonswine/mini_sendmail/archive/1.3.8-1.tar.gz  && \
+    tar xvfz 1.3.8-1.tar.gz && \
     cd mini_sendmail*/ && \
-    sed -i 's/"127\.0\.0\.1"/"172.17.42.1"/g' mini_sendmail.c && \
-    make && \
+    make SMTP_HOST=172.17.42.1 && \
     cp -v mini_sendmail /usr/sbin/sendmail && \
     rm -rf /tmp/install
