--- a/php-5.6/Dockerfile
+++ b/php-5.6/Dockerfile
@@ -11,7 +11,7 @@ RUN apt-get update &&  \
         libgpg-error-dev uuid-dev libt1-dev libsnmp-dev libc-client2007e-dev \
         libaspell-dev libbz2-dev libc-client2007e-dev flex bison libsqlite3-dev libpq-dev \
         libcurl4-openssl-dev libmagickwand-dev libgd2-xpm-dev autoconf imagemagick \
-        graphicsmagick libdb-dev libtidy-dev libxslt-dev libgeoip-dev libicu-dev spawn-fcgi && \
+        graphicsmagick libdb-dev libtidy-dev libxslt-dev libgeoip-dev libicu-dev spawn-fcgi re2c && \
     DEBIAN_FRONTEND=noninteractive apt-get -y dist-upgrade && \
     apt-get clean && \
     rm /var/lib/apt/lists/*_*
